@@ -71,16 +71,20 @@ int gsl_matrix_complex_fscanf (FILE * stream, gsl_matrix_complex * m);
 int gsl_matrix_complex_fprintf (FILE * stream, const gsl_matrix_complex * m, const char * format);
 
 int gsl_matrix_complex_memcpy(gsl_matrix_complex * dest, const gsl_matrix_complex * src);
+int gsl_matrix_complex_swap(gsl_matrix_complex * m1, const gsl_matrix_complex * m2);
 
 int gsl_matrix_complex_swap_rows(gsl_matrix_complex * m, const size_t i, const size_t j);
 int gsl_matrix_complex_swap_columns(gsl_matrix_complex * m, const size_t i, const size_t j);
 int gsl_matrix_complex_swap_rowcol(gsl_matrix_complex * m, const size_t i, const size_t j);
 
+int gsl_matrix_complex_transpose (gsl_matrix_complex * m);
 
 gsl_matrix_complex gsl_matrix_complex_submatrix (gsl_matrix_complex * m, size_t i, size_t j, size_t n1, size_t n2);
 gsl_vector_complex gsl_matrix_complex_row (gsl_matrix_complex * m, size_t i);
 gsl_vector_complex gsl_matrix_complex_column (gsl_matrix_complex * m, size_t j);
 gsl_vector_complex gsl_matrix_complex_diagonal (gsl_matrix_complex * m);
+
+int gsl_matrix_complex_isnull (const gsl_matrix_complex * m);
 
 /***********************************************************************/
 /* The functions below are obsolete                                    */
