@@ -72,10 +72,13 @@ int gsl_matrix_float_fscanf (FILE * stream, gsl_matrix_float * m);
 int gsl_matrix_float_fprintf (FILE * stream, const gsl_matrix_float * m, const char * format);
  
 int gsl_matrix_float_memcpy(gsl_matrix_float * dest, const gsl_matrix_float * src);
+int gsl_matrix_float_swap(gsl_matrix_float * m1, const gsl_matrix_float * m2);
 
 int gsl_matrix_float_swap_rows(gsl_matrix_float * m, const size_t i, const size_t j);
 int gsl_matrix_float_swap_columns(gsl_matrix_float * m, const size_t i, const size_t j);
 int gsl_matrix_float_swap_rowcol(gsl_matrix_float * m, const size_t i, const size_t j);
+int gsl_matrix_float_transpose (gsl_matrix_float * m);
+
 
 gsl_matrix_float gsl_matrix_float_submatrix (gsl_matrix_float * m, size_t i, size_t j, size_t n1, size_t n2);
 gsl_vector_float gsl_matrix_float_row (gsl_matrix_float * m, size_t i);
@@ -89,6 +92,8 @@ void gsl_matrix_float_minmax (const gsl_matrix_float * m, float * min_out, float
 void gsl_matrix_float_max_index (const gsl_matrix_float * m, size_t * imax, size_t *jmax);
 void gsl_matrix_float_min_index (const gsl_matrix_float * m, size_t * imin, size_t *jmin);
 void gsl_matrix_float_minmax_index (const gsl_matrix_float * m, size_t * imin, size_t * jmin, size_t * imax, size_t * jmax);
+
+int gsl_matrix_float_isnull (const gsl_matrix_float * m);
 
 /***********************************************************************/
 /* The functions below are obsolete                                    */
