@@ -72,10 +72,13 @@ int gsl_matrix_int_fscanf (FILE * stream, gsl_matrix_int * m);
 int gsl_matrix_int_fprintf (FILE * stream, const gsl_matrix_int * m, const char * format);
  
 int gsl_matrix_int_memcpy(gsl_matrix_int * dest, const gsl_matrix_int * src);
+int gsl_matrix_int_swap(gsl_matrix_int * m1, const gsl_matrix_int * m2);
 
 int gsl_matrix_int_swap_rows(gsl_matrix_int * m, const size_t i, const size_t j);
 int gsl_matrix_int_swap_columns(gsl_matrix_int * m, const size_t i, const size_t j);
 int gsl_matrix_int_swap_rowcol(gsl_matrix_int * m, const size_t i, const size_t j);
+int gsl_matrix_int_transpose (gsl_matrix_int * m);
+
 
 gsl_matrix_int gsl_matrix_int_submatrix (gsl_matrix_int * m, size_t i, size_t j, size_t n1, size_t n2);
 gsl_vector_int gsl_matrix_int_row (gsl_matrix_int * m, size_t i);
@@ -89,6 +92,8 @@ void gsl_matrix_int_minmax (const gsl_matrix_int * m, int * min_out, int * max_o
 void gsl_matrix_int_max_index (const gsl_matrix_int * m, size_t * imax, size_t *jmax);
 void gsl_matrix_int_min_index (const gsl_matrix_int * m, size_t * imin, size_t *jmin);
 void gsl_matrix_int_minmax_index (const gsl_matrix_int * m, size_t * imin, size_t * jmin, size_t * imax, size_t * jmax);
+
+int gsl_matrix_int_isnull (const gsl_matrix_int * m);
 
 /***********************************************************************/
 /* The functions below are obsolete                                    */
