@@ -72,10 +72,13 @@ int gsl_matrix_long_fscanf (FILE * stream, gsl_matrix_long * m);
 int gsl_matrix_long_fprintf (FILE * stream, const gsl_matrix_long * m, const char * format);
  
 int gsl_matrix_long_memcpy(gsl_matrix_long * dest, const gsl_matrix_long * src);
+int gsl_matrix_long_swap(gsl_matrix_long * m1, const gsl_matrix_long * m2);
 
 int gsl_matrix_long_swap_rows(gsl_matrix_long * m, const size_t i, const size_t j);
 int gsl_matrix_long_swap_columns(gsl_matrix_long * m, const size_t i, const size_t j);
 int gsl_matrix_long_swap_rowcol(gsl_matrix_long * m, const size_t i, const size_t j);
+int gsl_matrix_long_transpose (gsl_matrix_long * m);
+
 
 gsl_matrix_long gsl_matrix_long_submatrix (gsl_matrix_long * m, size_t i, size_t j, size_t n1, size_t n2);
 gsl_vector_long gsl_matrix_long_row (gsl_matrix_long * m, size_t i);
@@ -89,6 +92,8 @@ void gsl_matrix_long_minmax (const gsl_matrix_long * m, long * min_out, long * m
 void gsl_matrix_long_max_index (const gsl_matrix_long * m, size_t * imax, size_t *jmax);
 void gsl_matrix_long_min_index (const gsl_matrix_long * m, size_t * imin, size_t *jmin);
 void gsl_matrix_long_minmax_index (const gsl_matrix_long * m, size_t * imin, size_t * jmin, size_t * imax, size_t * jmax);
+
+int gsl_matrix_long_isnull (const gsl_matrix_long * m);
 
 /***********************************************************************/
 /* The functions below are obsolete                                    */
