@@ -72,10 +72,13 @@ int gsl_matrix_short_fscanf (FILE * stream, gsl_matrix_short * m);
 int gsl_matrix_short_fprintf (FILE * stream, const gsl_matrix_short * m, const char * format);
  
 int gsl_matrix_short_memcpy(gsl_matrix_short * dest, const gsl_matrix_short * src);
+int gsl_matrix_short_swap(gsl_matrix_short * m1, const gsl_matrix_short * m2);
 
 int gsl_matrix_short_swap_rows(gsl_matrix_short * m, const size_t i, const size_t j);
 int gsl_matrix_short_swap_columns(gsl_matrix_short * m, const size_t i, const size_t j);
 int gsl_matrix_short_swap_rowcol(gsl_matrix_short * m, const size_t i, const size_t j);
+int gsl_matrix_short_transpose (gsl_matrix_short * m);
+
 
 gsl_matrix_short gsl_matrix_short_submatrix (gsl_matrix_short * m, size_t i, size_t j, size_t n1, size_t n2);
 gsl_vector_short gsl_matrix_short_row (gsl_matrix_short * m, size_t i);
@@ -89,6 +92,8 @@ void gsl_matrix_short_minmax (const gsl_matrix_short * m, short * min_out, short
 void gsl_matrix_short_max_index (const gsl_matrix_short * m, size_t * imax, size_t *jmax);
 void gsl_matrix_short_min_index (const gsl_matrix_short * m, size_t * imin, size_t *jmin);
 void gsl_matrix_short_minmax_index (const gsl_matrix_short * m, size_t * imin, size_t * jmin, size_t * imax, size_t * jmax);
+
+int gsl_matrix_short_isnull (const gsl_matrix_short * m);
 
 /***********************************************************************/
 /* The functions below are obsolete                                    */
