@@ -72,10 +72,13 @@ int gsl_matrix_uint_fscanf (FILE * stream, gsl_matrix_uint * m);
 int gsl_matrix_uint_fprintf (FILE * stream, const gsl_matrix_uint * m, const char * format);
  
 int gsl_matrix_uint_memcpy(gsl_matrix_uint * dest, const gsl_matrix_uint * src);
+int gsl_matrix_uint_swap(gsl_matrix_uint * m1, const gsl_matrix_uint * m2);
 
 int gsl_matrix_uint_swap_rows(gsl_matrix_uint * m, const size_t i, const size_t j);
 int gsl_matrix_uint_swap_columns(gsl_matrix_uint * m, const size_t i, const size_t j);
 int gsl_matrix_uint_swap_rowcol(gsl_matrix_uint * m, const size_t i, const size_t j);
+int gsl_matrix_uint_transpose (gsl_matrix_uint * m);
+
 
 gsl_matrix_uint gsl_matrix_uint_submatrix (gsl_matrix_uint * m, size_t i, size_t j, size_t n1, size_t n2);
 gsl_vector_uint gsl_matrix_uint_row (gsl_matrix_uint * m, size_t i);
@@ -89,6 +92,8 @@ void gsl_matrix_uint_minmax (const gsl_matrix_uint * m, unsigned int * min_out, 
 void gsl_matrix_uint_max_index (const gsl_matrix_uint * m, size_t * imax, size_t *jmax);
 void gsl_matrix_uint_min_index (const gsl_matrix_uint * m, size_t * imin, size_t *jmin);
 void gsl_matrix_uint_minmax_index (const gsl_matrix_uint * m, size_t * imin, size_t * jmin, size_t * imax, size_t * jmax);
+
+int gsl_matrix_uint_isnull (const gsl_matrix_uint * m);
 
 /***********************************************************************/
 /* The functions below are obsolete                                    */
